--- a/video.html
+++ b/video.html
@@ -118,6 +118,12 @@
                     Browser Anda tidak mendukung video.
                 </video>
             </div>
+             <div class="video-container">
+                <video controls>
+                    <source src="Gambar/vidio2.mp4" type="video/mp4">
+                    Browser Anda tidak mendukung video.
+                </video>
+            </div>
             
 
             <!-- Tambahkan lebih banyak video sesuai kebutuhan -->
