--- a/video.html
+++ b/video.html
@@ -120,7 +120,7 @@
             </div>
              <div class="video-container">
                 <video controls>
-                    <source src="Gambar/vidio2.mp4" type="video/mp4">
+                    <source src="Gambar/Vidio2.mp4" type="video/mp4">
                     Browser Anda tidak mendukung video.
                 </video>
             </div>
