--- a/Thirdday.html
+++ b/Thirdday.html
@@ -114,12 +114,12 @@
         <div class="slider">
             <div>
                 <a href="#">
-                    <img src="Gambar/image_75.jpg" alt="Image 75">
+                    <img src="Gambar/image_75a.jpg" alt="Image 75">
                 </a>            
             </div>
             <div>
                 <a href="#">
-                    <img src="Gambar/image_76.jpg" alt="Image 76">
+                    <img src="Gambar/image_76a.jpg" alt="Image 76">
                 </a>
             </div>
             <div>
