--- a/video.html
+++ b/video.html
@@ -124,6 +124,30 @@
                     Browser Anda tidak mendukung video.
                 </video>
             </div>
+             <div class="video-container">
+                <video controls>
+                    <source src="Gambar/Vidio3.mp4" type="video/mp4">
+                    Browser Anda tidak mendukung video.
+                </video>
+            </div>
+             <div class="video-container">
+                <video controls>
+                    <source src="Gambar/Vidio4.mp4" type="video/mp4">
+                    Browser Anda tidak mendukung video.
+                </video>
+            </div>
+             <div class="video-container">
+                <video controls>
+                    <source src="Gambar/Vidio5.mp4" type="video/mp4">
+                    Browser Anda tidak mendukung video.
+                </video>
+            </div>
+             <div class="video-container">
+                <video controls>
+                    <source src="Gambar/Vidio6.mp4" type="video/mp4">
+                    Browser Anda tidak mendukung video.
+                </video>
+            </div>
             
 
             <!-- Tambahkan lebih banyak video sesuai kebutuhan -->
